...
import MaterialDesignIcons from '@react-native-vector-icons/material-design-icons'
import SearchStack from '../Search'
import TabBar from './tab-bar'
import SettingsStack from '../Settings'
import DiscoverStack from '../Discover'
import LibraryStack from '../Library'
import HomeStack from '../Home'

const Tabs = createBottomTabNavigator({
	initialRouteName: 'HomeTab',
	screenOptions: {
		animation: 'shift',
		lazy: true,
...
					<MaterialDesignIcons
						name={`jellyfish${!focused ? '-outline' : ''}`}
						color={color}
						size={size}
					/>
				),
				tabBarButtonTestID: 'home-tab-button',
			},
		}),
		LibraryTab: createBottomTabScreen({
			screen: LibraryStack,
			options: {
				title: 'Library',
...
					<MaterialDesignIcons
						name={`music-box-multiple${!focused ? '-outline' : ''}`}
						color={color}
						size={size}
					/>
				),
				tabBarButtonTestID: 'library-tab-button',
			},
		}),
		SearchTab: createBottomTabScreen({
			screen: SearchStack,
			options: {
				title: 'Search',
				headerShown: false,
				tabBarIcon: ({ color, size }) => (
					<MaterialDesignIcons name='magnify' color={color} size={size} />
				),
				tabBarButtonTestID: 'search-tab-button',
			},
		}),
		DiscoverTab: createBottomTabScreen({
			screen: DiscoverStack,
			options: {
				title: 'Discover',
...
