import { QueryKeys } from '../../enums/query-keys'
import { CarPlay, ListTemplate } from 'react-native-carplay'
import { queryClient } from '../../constants/query-client'
import { BaseItemDto } from '@jellyfin/sdk/lib/generated-client/models'
import TracksTemplate from './Tracks'
import ArtistsTemplate from './Artists'
import uuid from 'react-native-uuid'
import { InfiniteData } from '@tanstack/react-query'
import {
	RecentlyPlayedArtistsQueryKey,
	RecentlyPlayedTracksQueryKey,
...
	tabSystemImageName: 'music.house.fill',
	sections: [
		{
			header: 'Recents',
			items: [
				{ id: QueryKeys.RecentlyPlayedArtists, text: 'Recent Artists' },
				{ id: QueryKeys.RecentlyPlayed, text: 'Play it again' },
			],
		},
		{
			header: 'Frequents',
			items: [
				{ id: QueryKeys.FrequentArtists, text: 'Most Played' },
...
				await queryClient.ensureInfiniteQueryData(PlayItAgainQuery(library))

				const items = queryClient.getQueryData<InfiniteData<BaseItemDto[], unknown>>(
					RecentlyPlayedTracksQueryKey(user, library),
				) ?? { pages: [], pageParams: [] }

				CarPlay.pushTemplate(TracksTemplate(items.pages.flat(), 'Recently Played'), true)
				break
			}

			case 2: {
				// Most Played Artists
				const artists = queryClient.getQueryData<InfiniteData<BaseItemDto[], unknown>>(
...
